--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </transform>
         <TimeSensor DEF='Time' cycleInterval='4' loop='true'></TimeSensor>
             <TimeSensor DEF='Time2' cycleInterval='0.7' loop='true'></TimeSensor>
-            <OrientationInterpolator DEF='OI' key='0, 0.5, 1' keyValue='0 1 0 0, 0 1 0 3.14, 0 1 0 6.28'></OrientationInterpolator>
+            <OrientationInterpolator DEF='wroom' key='0, 0.25,  0.75, 1' keyValue='0 0 1 0, 0 0 1 1.571, 0 0 1 -1.571, 0 0 1 0'></OrientationInterpolator>
             <PositionInterpolator DEF='FrontMove' key='0, 0.5, 1' keyValue='0 0 0 , 0 0 5, 0 0 0 '></PositionInterpolator>
             <PositionInterpolator DEF='BackMove' key='0, 0.5, 1' keyValue='0 0 0 , 0 0 -5, 0 0 0 '></PositionInterpolator>
             <PositionInterpolator DEF='BodyLong' key='0, 0.5, 1' keyValue='1 1 1 ,1 2 1,1 1 1'></PositionInterpolator>
@@ -352,6 +352,14 @@
              <ROUTE fromNode='BackMove' fromField='value_changed'
                    toNode='backhalf' toField='set_translation'>
             </ROUTE>
+             </ROUTE>
+            <ROUTE fromNode='Time2' fromField='fraction_changed'
+                   toNode='wroom' toField='set_fraction'>
+            </ROUTE>
+             <ROUTE fromNode='wroom' fromField='value_changed'
+                   toNode='tail' toField='set_rotation'>
+            </ROUTE>
+           
       </Scene>
     </X3D>
   </body>
