--- a/lab4.html
+++ b/lab4.html
@@ -144,6 +144,7 @@
 					
 					<ColorInterpolator DEF="ColInt" key="0 0.5 1"
 						keyValue="0.6 0.6 0, 1 0 0, 0.6 0.6 0">
+					</ColorInterpolator>
 					<ROUTE fromNode="Time" fromField="fraction_changed"
 						toNode="ColInt" toField="set_fraction"></ROUTE>
 					<ROUTE fromNode="ColInt" fromField="value_changed"
