--- a/lab4.html
+++ b/lab4.html
@@ -155,12 +155,13 @@
 	<div id="tools" style="width: 1280px;">
 			<input type="checkbox" checked="true" onclick="lightSwitch('point')">
 				<label>point light</label>
+			</input>
 			<input type="checkbox" checked="true" onclick="lightSwitch('spot')">
-				<label>spot light</label>
+				<label>spot light</label></input>
 			<input type="checkbox" checked="true" onclick="lightSwitch('directional')">
-				<label>directional light</label>
+				<label>directional light</label></input>
 			<input type="checkbox" checked="true" onclick="headlight()">
-				<label>headlight</label>
+				<label>headlight</label></input>
 	</div>
 	</div>
   </body> 
