--- a/index.html
+++ b/index.html
@@ -40,76 +40,76 @@
       <ImageTexture url="https://thumbs.dreamstime.com/b/снег-зимы-взгляд-сверху-текстуры-снега-текстура-для-дизайна-белизны-128315802.jpg" repeatS="true" repeatT="true">   
       </ImageTexture>
       <TextureTransform rotation='1.5708' scale="3 2" translation='0.33 0.5'></TextureTransform>
-      </appearance>
-    </Shape>
-  </Transform>
-  <Collision enabled = "true">
-    <transform translation='0 0.2 0' rotation='0 0 0 0'>  <!---train body--->
-      <Group DEF = "CylinderAndBoxAndCabinAndConeAndSnoutAndSphereAndTyreAndWheelAndWindow1AndWindow2"  translation ='0 0 0' 
-      rotation = '0 0 0 0'>
-      <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor> 
-      <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='0 -20 0 , 0 6 0, 0 6 0, 0 6 0, 0 -20 0 '>
-      </PositionInterpolator >
-      <transform translation='0 0 0' rotation='0 0 2 1.55'>
-        <Anchor url="https://ru.wikipedia.org/wiki/%D0%9F%D0%B0%D1%80%D0%BE%D0%B2%D0%BE%D0%B7" parameter="target='_self'">
-         <Transform DEF='Trans'translation='0 0 0'>
-          <shape DEF="Cylinder">                                                 
-            <appearance>
-              <Material></Material>
-              <ImageTexture url="https://2.bp.blogspot.com/-wbMKGGOgO3Y/XAFWLtRdmLI/AAAAAAAALi8/3HD7Hr3PRXwu3yFnx8M4IdkvEembSDrJACLcBGAs/s640/metall_setka_treschiny_carapiny_chb_tekstura_1920x1200.jpg" repeatS="true" repeatT="true"></ImageTexture>
-              <TextureTransform rotation='1.5708' scale="1 1" translation='0.33 0.5'>
-              </appearance>
-              <cylinder radius = "1" height = "4.3" ></cylinder>
-            </shape> 
-          </Transform>
-          <ROUTE fromNode='Time2' fromField='fraction_changed' 
-          toNode='PosInt' toField='set_fraction'>
-        </ROUTE>
-        <ROUTE fromNode='PosInt' fromField='value_changed' 
-        toNode='Trans' toField='set_translation'>
-      </ROUTE>
-    </Anchor> 
-    <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor>  <!--train platform--->
-    <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='0 -20 0 , 0 6 0, 0 6 0, 0 6 0, 0 -20 0 '></PositionInterpolator>
-    <transform translation='-1.2 0.87  0' rotation='1 0 0 0'> 
-     <Transform DEF='Trans'translation='0 0 0' >
-       <shape DEF = "Box">
-         <appearance>
-           <material diffuseColor='#000000'></material>
-         </appearance>
-         <box size="0.5 6 2"></box>
-       </shape>
-       <ROUTE fromNode='Time2' fromField='fraction_changed' 
-       toNode='PosInt' toField='set_fraction'>
-     </ROUTE>
-     <ROUTE fromNode='PosInt' fromField='value_changed' 
-     toNode='Trans' toField='set_translation'>
-   </ROUTE>
-   <transform translation='1.5 2 0' rotation='1 0 0 0'>  <!--cabin--->
-    <shape DEF = "Cabin" >
-     <appearance>
-       <material diffuseColor='#800000'></material>
-     </appearance>
-     <box size="2.5 2 2"></box>
-   </shape>  <!--funnel--->             
-   <transform  translation = '0 0 0'>
-     <transform translation='1.1 -4 0' rotation='0 0 1 7.9'>                     
-      <shape DEF = "Cone">
-        <appearance>
-          <material diffuseColor='#600000'></material>
-        </appearance>
-        <cone bottomRadius='0.4' height='0.9' topRadius='0.1' ></cone>
-      </shape>
-      <transform translation='-0.50 3 0' rotation='0 0.75 0 -2.4'>  <!--track cleaner-->   
-        <shape DEF = "Snout">
+    </appearance>
+  </Shape>
+</Transform>
+<Collision enabled = "true">
+  <transform translation='0 0.2 0' rotation='0 0 0 0'>  <!---train body--->
+    <Group DEF = "CylinderAndBoxAndCabinAndConeAndSnoutAndSphereAndTyreAndWheelAndWindow1AndWindow2"  translation ='0 0 0' 
+    rotation = '0 0 0 0'>
+    <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor> 
+    <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='0 -20 0 , 0 6 0, 0 6 0, 0 6 0, 0 -20 0 '>
+    </PositionInterpolator >
+    <transform translation='0 0 0' rotation='0 0 2 1.55'>
+      <Anchor url="https://ru.wikipedia.org/wiki/%D0%9F%D0%B0%D1%80%D0%BE%D0%B2%D0%BE%D0%B7" parameter="target='_self'">
+       <Transform DEF='Trans'>
+        <shape DEF="Cylinder">                                                 
           <appearance>
-            <material diffuseColor='#008000'></material>
-          </appearance>
-          <snout dbottom='0.5' dtop='2.5' height='1.2' xoff='1' yoff='1'></snout> 
-        </shape>
-      </transform>
+            <Material></Material>
+            <ImageTexture url="https://2.bp.blogspot.com/-wbMKGGOgO3Y/XAFWLtRdmLI/AAAAAAAALi8/3HD7Hr3PRXwu3yFnx8M4IdkvEembSDrJACLcBGAs/s640/metall_setka_treschiny_carapiny_chb_tekstura_1920x1200.jpg" repeatS="true" repeatT="true"></ImageTexture>
+            <TextureTransform rotation='1.5708' scale="1 1" translation='0.33 0.5'>
+            </appearance>
+            <cylinder radius = "1" height = "4.3" ></cylinder>
+          </shape> 
+        </Transform>
+        <ROUTE fromNode='Time2' fromField='fraction_changed' 
+        toNode='PosInt' toField='set_fraction'>
+      </ROUTE>
+      <ROUTE fromNode='PosInt' fromField='value_changed' 
+      toNode='Trans' toField='set_translation'>
+    </ROUTE>
+  </Anchor> 
+  <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor>  <!--train platform--->
+  <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='0 -20 0 , 0 6 0, 0 6 0, 0 6 0, 0 -20 0 '></PositionInterpolator>
+  <transform translation='-1.2 0.87  0' rotation='1 0 0 0'> 
+   <Transform DEF='Trans'>
+     <shape DEF = "Box">
+       <appearance>
+         <material diffuseColor='#000000'></material>
+       </appearance>
+       <box size="0.5 6 2"></box>
+     </shape>
+     <ROUTE fromNode='Time2' fromField='fraction_changed' 
+     toNode='PosInt' toField='set_fraction'>
+   </ROUTE>
+   <ROUTE fromNode='PosInt' fromField='value_changed' 
+   toNode='Trans' toField='set_translation'>
+ </ROUTE>
+ <transform translation='1.5 2 0' rotation='1 0 0 0'>  <!--cabin--->
+  <shape DEF = "Cabin" >
+   <appearance>
+     <material diffuseColor='#800000'></material>
+   </appearance>
+   <box size="2.5 2 2"></box>
+ </shape>  <!--funnel--->             
+ <transform  translation = '0 0 0'>
+   <transform translation='1.1 -4 0' rotation='0 0 1 7.9'>                     
+    <shape DEF = "Cone">
+      <appearance>
+        <material diffuseColor='#600000'></material>
+      </appearance>
+      <cone bottomRadius='0.4' height='0.9' topRadius='0.1' ></cone>
+    </shape>
+    <transform translation='-0.50 3 0' rotation='0 0.75 0 -2.4'>  <!--track cleaner-->   
+      <shape DEF = "Snout">
+        <appearance>
+          <material diffuseColor='#008000'></material>
+        </appearance>
+        <snout dbottom='0.5' dtop='2.5' height='1.2' xoff='1' yoff='1'></snout> 
+      </shape>
     </transform>
   </transform>
+</transform>
 </transform>
 </transform>
 </transform>
