--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
   </transform>
 </transform>
 </transform>
+</Transform>
 </transform>
 </transform>
 <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor>  <!--front part-->                       
