--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </transform>
 <transform translation ='2.6 -0.2 0' rotation='0 1 0 3.14'>
 <Inline nameSpaceName="Deer" 
-                     url="Deer.x3d" />
+                     url="https://doc.x3dom.org/tutorials/models/inline/Deer.x3d" />
 					 </transform>
 					 <!--text-->
 <transform DEF="tablichka" translation='2 4 0'>
