--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
   </transform>
 </transform>
 </transform>
-</Transform>
 </transform>
 </transform>
 <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor>  <!--front part-->                       
@@ -139,7 +138,7 @@ toNode='ColInt' toField='set_fraction'>
 toNode='Mat1' toField='set_diffuseColor'>         
 </ROUTE>
 </transform>
-</transform>  <!--right back wheel-->  
+</Transform>  <!--right back wheel-->  
 <TimeSensor DEF='Time2' cycleInterval='12' loop='true' enabled='true'></TimeSensor>                                                         
 <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='0 -20 0 , 0 6 0, 0 6 0, 0 6 0, 0 -20 0 '  ></PositionInterpolator >
 <Transform DEF='Trans' translation='0 0 0'>
