--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ toNode='Mat1' toField='set_diffuseColor'>
    <ScalarInterpolator DEF='ScInt' key='0 0.5 1' keyValue='0.45 2.9 -0.91'></ScalarInterpolator>
    <shape DEF = "Window1">
      <appearance>
-       <material  DEF='Mat'transparency ="0" diffusecolor='#66DDEB'></material>
+       <material  DEF='Mat' diffusecolor='#66DDEB'></material>
      </appearance>
      <box size="1.7 1.5 0.2"></box>
    </shape>
