--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@ toNode='Trans' toField='set_translation'>
  </Shape>
 </transform>  
 </Group>
+</transform>
 </Collision>
 <Transform translation= '2 -2.4 -9'> 
   <TimeSensor DEF='Time3' cycleInterval='8' loop='true'></TimeSensor> <!-----mountain--->
@@ -489,7 +490,7 @@ toNode='CoordInt' toField='set_fraction'>
 toNode='Coord' toField='set_point'>
 </ROUTE>
 </Transform>
-</Scene>
+</scene>
 </x3d>
 </body>
 </html>
