--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@ toNode='Trans' toField='set_translation'>
 </transform>  
 </Group>
 </transform>
+</transform>
 </Collision>
 <Transform translation= '2 -2.4 -9'> 
   <TimeSensor DEF='Time3' cycleInterval='8' loop='true'></TimeSensor> <!-----mountain--->
