--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <ColorRGBA color="7.2 0.2 2.2 1, 0.2 0.2 7.2 1, 0.2 0.2 0.2 1, 3.2 0.2 0.2 1, 6.2 0.2 4.2 1"></ColorRGBA>
     </IndexedTriangleSet>	
     </Shape>
-    </Transform>
+    </transform>
   </Transform>
 </Anchor>
 
