--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
 <Group DEF="Lab3">
   <Fog fogType="EXPONENTIAL" color="#FFFAFA" visibilityRange='110'></Fog>
     <Background 
-      backUrl = "back.png" ,
-      bottomUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\bottom.png" , 
-      frontUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\front.png",
-      leftUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\left.png", 
-      rightUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\right.png", 
+      backUrl = "back.png" 
+      bottomUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\bottom.png"  
+      frontUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\front.png"
+      leftUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\left.png"
+      rightUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\right.png" 
       topUrl= "W:\1yceba\big hentai collection (6 sem)\графика рафика\лаб3\top.png" >
     </Background>
 
