--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ toNode='Trans' toField='set_translation'>
  </shape>
 </transform>
 </Transform>
+</transform>
 </Group>
 <transform translation="0 -0.3 0" rotation=" 0 0 0.01 1.57">
   <Group DEF='RailAndCross-tieTogether' translation ='0 0 0' rotation = '0 0 0 0'>
