--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/> 
      <title>My fourth X3DOM page</title> 
-     <script type='text/javascript' src='http://x3dom.org/release/x3dom-full.js'> </script> 
+     <script type='text/javascript' src='https://x3dom.org/release/x3dom-full.js'> </script> 
      <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'></link> 
 	 <script>
  function lightSwitch(id){
